# qkd-ir

./: CMakeLists.txt  README.md
data/: BG1.alist  BG2.alist  H_1296_2_3.alist  H_1296_5_6.alist  H_1944_1_2.alist  H_1944_2_3.alist  H_1944_3_4.alist  H_648_1_2.alist  H_648_3_4.alist
demos/: CMakeLists.txt  exposed-main.cpp  logger-main.cpp  model-main.cpp  opt-main-genetic.cpp  opt-main-greedy.cpp  opt-main-mt.cpp  opt-main.cpp
src/: CMakeLists.txt
src/coding/: CMakeLists.txt
src/coding/LDPC/: CMakeLists.txt
src/coding/LDPC/decoders/: CMakeLists.txt  decoders.cpp  decoders.h
src/coding/LDPC/utils/: 5g_bg_shifts.h  CMakeLists.txt  ldpc-utils.cpp  ldpc-utils.hpp
src/coding/alist/: CMakeLists.txt  alist_matrix.cpp  alist_matrix.h
src/coding/benchmarks/: CMakeLists.txt  benchmarks.cpp  benchmarks.h
src/coding/data/: H_1296_3_4.alist  H_1944_5_6.alist  H_648_2_3.alist  H_648_5_6.alist  R.txt
src/coding/file-processor/: CMakeLists.txt  file-processor.cpp  file-processor.h
src/coding/math/: CMakeLists.txt  GF2.hpp  efrinv.hpp
src/error-estimation/: CMakeLists.txt  result-exposed.cpp  result-exposed.h
src/ldpc-optimizer/: CMakeLists.txt  base-manager.cpp  genetic_algo.cpp  genetic_algo_utils.cpp  manager.cpp  print-opt-process.cpp  result-mt.cpp  result.cpp  worker.cpp
src/ldpc-optimizer/include/: base-manager.h  genetic_algo.hpp  genetic_algo_utils.hpp  manager.h  result-mt.h  result.h  sync_queue.hpp  task.hpp  utils.hpp  worker.h
src/logger/: CMakeLists.txt
src/logger/log-sender/: CMakeLists.txt  LogReceiver.cpp  LogReceiver.h  LogSender.cpp  LogSender.h
src/logger/logger/: CMakeLists.txt  Dockerfile  datetime.cpp  datetime.h  logger-main.cpp  logger.cpp  logger.h  loggerDB.h
src/model/: CMakeLists.txt  qkdmodel.cpp
src/model/include/qkdmodel/: qkdmodel.h
tests/: CMakeLists.txt  test-genetic-algo-utils.cpp  test-genetic-algo.cpp  test_find_intersection.cpp
